<resources>
    <string name="app_name">iRent</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="imagem_recuperar_senha">Imagem recuperar senha</string>
    <string name="email">Email</string>
    <string name="obs">Obs.: Insira seu email no campo indicado e clique em Recuperar para enviar sua senha ao email
        cadastrado
    </string>
    <string name="recuperar">Recuperar</string>
    <string name="eu_quero">Eu quero</string>
    <string name="buscar">Buscar</string>
    <string name="criar_oferta">Criar Oferta</string>
    <string name="cone_localiza_o">Ícone localização</string>
    <string name="cone_casa">Ícone casa</string>
    <string name="criar_anuncio">Criar Anúncio</string>
    <string name="hint_view_cadastro">Cadastro</string>
    <string name="hint_edit_nome">Nome</string>
    <string name="hint_sua_senha">Sua senha</string>
    <string name="hint_edit_email">Email</string>
    <string name="hint_edit_telefone">Telefone</string>
    <string name="hint_edit_usuario">Usuário</string>
    <string name="hint_edit_senha">Senha</string>
    <string name="hint_edit_confirmar_senha">Confirmar Senha</string>
    <string name="hint_btn_cadastrar">Cadastrar</string>
    <string name="hint_view_sexo">Sexo</string>
    <string name="hint_radio_feminino">Feminino</string>
    <string name="hint_radio_masculino">Masculino</string>
    <string name="hint_check_termos">Termos de Aceitação</string>
    <string name="erro_confirmar_senha">Senha não confere!</string>
    <string name="hint_view_ofertar">Ofertar</string>
    <string name="hint_titulo_oferta">Título</string>
    <string name="hint_descricao_oferta">Descrição</string>
    <string name="hint_preco_oferta">Preço (R$)</string>
    <string name="hint_view_preferencias">Preferências</string>
    <string name="hint_view_restricoes">Restrições</string>
    <string name="hint_check_animal">Animais</string>
    <string name="hint_check_meninos">Meninos</string>
    <string name="hint_check_meninas">Meninas</string>
    <string name="hint_check_som_alto">Som alto</string>
    <string name="hint_btn_ofertar">Ofertar</string>
    <string name="hint_view_fotos">Adicionar foto(s)</string>
    <string name="hint_view_localidade">Adicionar localidade</string>
    <string name="erro_campo_obrigatorio">Campo obrigatório!</string>
    <string name="hint_view_inicial">Eu Quero...</string>
    <string name="hint_btn_chamar_busca">Buscar</string>
    <string name="hint_btn_criar_oferta">Criar Oferta</string>
    <string name="hint_btn_criar_anuncio">Criar Anúncio</string>
    <string name="erro_preco_negativo">Erro! Insira um valor válido!</string>
    <string name="inicial">Inicial</string>
    <string name="nome_usu_rio">Nome Usuário</string>
    <string name="titulo">Título:</string>
    <string name="imagem_do_perfil_do_usuario">Imagem do perfil do usuário</string>
    <string name="telefone">Telefone:</string>
    <string name="Email">Email:</string>
    <string name="nota">Nota:</string>
    <string name="descricao">Descrição:</string>
    <string name="comentarios">Comentários:</string>
    <string name="comentario_do_usuario">comentário do usuário</string>
    <string name="mapa">Mapa</string>
    <string name="fotos">Fotos</string>
    <string name="mais">Mais</string>
    <string name="wifi">Wifi</string>
    <string name="localizacao">Localização</string>
    <string name="preco">Preço</string>
    <string name="animais">Animais</string>
    <string name="quantidade_pessoas">Quantidade \n Pessoas</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="estudante">Estudante</string>
</resources>
