<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaInicial">

    <TextView
            android:text="@string/hint_view_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view_inicial"
            android:hint="@string/hint_view_inicial"
            android:textSize="40sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="124dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.519"/>

    <Button
            android:text="@string/buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_chamar_busca"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="168dp"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@+id/view_inicial"
            android:hint="@string/hint_btn_chamar_busca"
            android:onClick="chamar_busca"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.938"/>

    <Button
            android:text="@string/hint_btn_criar_oferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_chamar_criar_oferta"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="136dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_chamar_busca"
            android:hint="@string/hint_btn_criar_oferta"
            android:onClick="chamar_criar_oferta"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.931"/>

    <Button
            android:text="@string/criar_anuncio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_criar_anuncio"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_chamar_criar_oferta"
            android:hint="@string/hint_btn_criar_anuncio"
            android:onClick="chamar_criar_anuncio"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintVertical_bias="0.014"/>

</androidx.constraintlayout.widget.ConstraintLayout>