<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:background="#FFFFFF">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:text="@string/hint_btn_selecionar_foto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selecionar_foto"
                    android:id="@+id/id_selecionar_foto"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:hint="@string/hint_btn_selecionar_foto"
                    android:height="150dp"
                    android:width="150dp"
                    android:layout_marginTop="40dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    app:civ_border_width="4dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="-150dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/id_circle_view"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="25dp"
                    android:id="@+id/edit_nome"
                    android:hint="@string/hint_edit_nome">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_nome"/>
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/edit_email"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_edit_email"
                    android:layout_marginTop="20dp"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/edit_telefone"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_edit_telefone"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/edit_usuario"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_edit_usuario">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_usuario"/>
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/edit_senha"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_edit_senha"
                    android:layout_marginTop="20dp"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/edit_confirmar_senha"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_edit_confirmar_senha"/>

            <TextView
                    android:text="@string/hint_view_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_sexo"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_view_sexo"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/radio_group_sexo">

                <RadioButton
                        android:text="@string/hint_radio_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_masculino"
                        android:layout_weight="1"
                        android:hint="@string/hint_radio_masculino"
                        android:layout_marginLeft="20dp"
                        android:checked="true"/>

                <RadioButton
                        android:text="@string/hint_radio_feminino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_feminino"
                        android:layout_weight="1"
                        android:hint="@string/hint_radio_feminino"
                        android:layout_marginLeft="180dp"
                        android:layout_marginTop="-32dp"/>

            </RadioGroup>

            <CheckBox
                    android:text="@string/hint_check_termos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_check_termos"/>

            <Button
                    android:text="@string/hint_btn_cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cadastrar"
                    android:hint="@string/hint_btn_cadastrar"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:enabled="false"/>

            <Button
                    android:text="@string/hint_id_ja_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cadastrado"
                    android:hint="@string/hint_id_ja_cadastro"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>