<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_menu_white_24dp"
            android:id="@+id/mainToolbarMain"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:titleTextColor="@android:color/white"/>

    <TextView
            android:text="@string/eu_quero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEuQuero"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/mainToolbarMain"/>

    <Button
            android:drawableStart="@drawable/ic_outline_location_on_black_24px"
            android:text="@string/buscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuscar"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEuQuero"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:drawableStart="@drawable/ic_outline_home_black_24px"
            android:text="@string/criar_oferta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCriarOferta"
            app:layout_constraintEnd_toEndOf="@+id/buttonBuscar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonBuscar"
            app:layout_constraintStart_toStartOf="@+id/buttonBuscar"/>


    <Button
            android:drawableStart="@drawable/ic_outline_add_circle_outline_black_24px"
            android:text="@string/criar_anuncio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCriarAnuncio"
            app:layout_constraintEnd_toEndOf="@+id/buttonBuscar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonCriarOferta"
            app:layout_constraintStart_toStartOf="@+id/buttonBuscar"
            app:layout_constraintHorizontal_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>