<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecuperarSenhaActivity">

    <androidx.appcompat.widget.Toolbar
            style="@style/Theme.Design.Light.NoActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recuperarToolbar"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_senha"
            android:id="@+id/textViewRecuperarSenha"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/recuperarToolbar"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/folder"
            android:id="@+id/imageViewRecuperarSenha"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecuperarSenha"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/imagem_recuperar_senha"
            />

    <Button
            android:text="@string/recuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRecuperar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:enabled="false"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recuperarSenhaEmailInputLayout"
            app:layout_constraintVertical_bias="1.0"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recuperarSenhaEmailInputLayout"
            app:helperText="@string/obs"
            app:helperTextEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewRecuperarSenha">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recuperarSenhaEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>